index.html title updated

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,7 @@
     -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
-  <title>React App</title>
+  <title>Bijay Marasini | Data Science (M.Sc.) Student | AI & Machine Learning</title>
 </head>
 
 <body>
